Fix hero legibility

--- a/src/index.scss
+++ b/src/index.scss
@@ -325,8 +325,8 @@ hr:after {
 }
 .section--hero {
   background: linear-gradient(
-    rgba(255, 255, 255, 0.5),
-    rgba(255, 255, 255, 0.5)
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.7)
   ),
   url('/img/scenes/pillar_valley_bg.png')
     no-repeat;
